# mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  main.py  main_stdio.py  pyproject.toml  requirements-dev.txt  requirements.txt  support-tools.md
.github/workflows/: ci-cd.yml
demo/: hackathon_demo_interactive.py
mcp_server/: mcp_tools.py  server.py
mcp_server/strategies/: base.py  mock_strategy.py
scripts/: record_demo.sh  setup_dev.sh
static/: enneagora-demo.cast  index.html
tests/unit/: test_app.py  test_main.py  test_main_stdio.py  test_mcp_tools.py  test_mock_strategy.py  test_models.py  test_server.py  test_support_tools.py
